tests/compile_fail/invalid_filter_field_expr.rs
use test_strategy::Arbitrary;
#[derive(Arbitrary, Debug, PartialEq)]
struct TestStruct {
    #[filter(#x)]
    x: u32,
}
fn bad_filter() {}

fn main() {}
