tests/compile_fail/invalid_filter_field_expr.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/invalid_filter_field_expr.rs:4:15
  |
4 |     #[filter(#x)]
  |               ^ expected `bool`, found `u32`
